--- a/Cloudents.Web/ClientApp/components/results/Result.less
+++ b/Cloudents.Web/ClientApp/components/results/Result.less
@@ -1,21 +1,22 @@
 ﻿@import "../../mixin.less";
-.right-in{
-    border: 1px solid @color-main-purple;
-    padding: 25px;
-    text-align: center;
-    p.empty-state{
-        letter-spacing: -.3px;
-        font-size: 40px;
-        font-weight: 300;
-        line-height: 1.1;
-        margin-bottom: 0;
-        color: @color-main-purple;
-        .bold-text{
-            font-weight: 700;
-        }
+
+.right-in {
+  border: 1px solid @color-main-purple;
+  padding: 25px;
+  text-align: center;
+  position: relative;
+  p.empty-state {
+    letter-spacing: -.3px;
+    font-size: 40px;
+    font-weight: 300;
+    line-height: 1.1;
+    margin-bottom: 0;
+    color: @color-main-purple;
+    .bold-text {
+      font-weight: 700;
     }
-}
-.right-in &:before {
+  }
+  &:before {
     content: ' ';
     position: absolute;
     width: 0;
@@ -23,180 +24,213 @@
     left: auto;
     right: -24px;
     top: 8px;
-    border-top: 11px solid transparent;
-    border-bottom: 11px solid transparent;
-    border-left: 24px solid @color-main-purple
-}
-
-.right-in &:after{
+    border-top: 8.5px solid transparent;
+    border-bottom: 8.5px solid transparent;
+    border-left: 24px solid @color-main-purple;
+  }
+  &:after {
     content: ' ';
     position: absolute;
     width: 0;
     height: 0;
     left: auto;
-    right: -20px;
-    top: 10px;
+    right: -19px;
+    top: 8px;
     bottom: auto;
-    border-top: 9px solid transparent;
-    border-bottom: 9px solid transparent;
+    border-top: 8.5px solid transparent;
+    border-bottom: 8.5px solid transparent;
     border-left: 20px solid @color-white;
+  }
+  @media (max-width: @screen-xs) {
+    margin-top: 36px;
+
+    &:after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 50%;
+      width: 0;
+      height: 0;
+      border-left: 8.5px solid transparent;
+      border-right: 8.5px solid transparent;
+      border-bottom:  20px solid @color-white;
+      margin-left: -21px;
+      margin-top: -42px;
+    }
+    &:before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 50%;
+      width: 0;
+      height: 0;
+      border-left: 8.5px solid transparent;
+      border-right: 8.5px solid transparent;
+      border-bottom:  20px solid @color-main-purple;
+      margin-left: -21px;
+      margin-top: -42px;
+    }
+
+  }
+
 }
 
 .fade-enter-active, .fade-leave-active {
-    transition: opacity .5s;
+  transition: opacity .5s;
 }
+
 .fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
-    opacity: 0;
+  opacity: 0;
 }
+
 .personalize-wrapper {
-    background: white;
-    border-radius: 4px;
+  background: white;
+  border-radius: 4px;
 }
 
 .empty-state {
-    svg {
-        width: 120px;
-        //height: 96px;
-        .responsive-property(width,120px,120px,100px);
-    }
+  svg {
+    width: 120px;
+    //height: 96px;
+    .responsive-property(width, 120px, 120px, 100px);
+  }
 
-    .img-wrap {
-        .flexSameSize();
-    }
+  .img-wrap {
+    .flexSameSize();
+  }
 
-    h6 {
-        color: @color-main-purple;
-        font-size: 16px;
-        letter-spacing: -0.3px;
-        line-height: 1.25;
-        font-weight: normal;
-        .user-search-text{
-            color: @color-grey;
-        }
+  h6 {
+    color: @color-main-purple;
+    font-size: 16px;
+    letter-spacing: -0.3px;
+    line-height: 1.25;
+    font-weight: normal;
+    .user-search-text {
+      color: @color-grey;
     }
+  }
 
-    .sug {
-        font-size: 12px;
-        color: @color-grey;
-        letter-spacing: -0.3px;
-    }
+  .sug {
+    font-size: 12px;
+    color: @color-grey;
+    letter-spacing: -0.3px;
+  }
 
-    ul {
-        list-style-position: inside;
-        padding: 0;
-    }
+  ul {
+    list-style-position: inside;
+    padding: 0;
+  }
 
-    li {
-        font-size: 12px;
-        letter-spacing: -0.3px;
-        color: #888b8e;
-    }
+  li {
+    font-size: 12px;
+    letter-spacing: -0.3px;
+    color: #888b8e;
+  }
 
-    background: #fff;
+  background: #fff;
 }
 
 .promo-cell {
-    background: white;
-    border-radius: 4px;
-    position: relative;
-    padding: 0;
-    border-radius: 4px;
-    overflow: hidden;
+  background: white;
+  border-radius: 4px;
+  position: relative;
+  padding: 0;
+  border-radius: 4px;
+  overflow: hidden;
 
+  .promo-title {
+    .responsive-property(font-size, 34px, null, 24px);
+    line-height: 1.18;
+    letter-spacing: -0.5px;
+    text-align: left;
+    color: rgba(255, 255, 255, 0.47);
+    background: @color-main-purple;
+    padding: 20px 14px;
 
-    .promo-title {
-        .responsive-property(font-size, 34px, null, 24px);
-        line-height: 1.18;
-        letter-spacing: -0.5px;
-        text-align: left;
-        color: rgba(255, 255, 255, 0.47);
-        background: @color-main-purple;
-        padding: 20px 14px;
-
-        @media(max-width: @screen-xs){
-            padding: 10px 8px;
-        }
+    @media (max-width: @screen-xs) {
+      padding: 10px 8px;
     }
+  }
 
-    p {
-        padding: 8px 14px 12px 14px;
-        .responsive-property(font-size, 18px, null, 14px);
-        line-height: 1.5;
-        letter-spacing: -0.3px;
-        color: @color-grey;
-        margin-bottom: 0;
-        max-width: 430px;
+  p {
+    padding: 8px 14px 12px 14px;
+    .responsive-property(font-size, 18px, null, 14px);
+    line-height: 1.5;
+    letter-spacing: -0.3px;
+    color: @color-grey;
+    margin-bottom: 0;
+    max-width: 430px;
 
-        @media(max-width: @screen-xs){
-            padding: 8px 8px 16px 8px;
-        }
+    @media (max-width: @screen-xs) {
+      padding: 8px 8px 16px 8px;
     }
+  }
 
-    .close-btn {
-        line-height: 0;
-        outline: none;
-        position: absolute;
-        top: 0;
-        right: 0;
+  .close-btn {
+    line-height: 0;
+    outline: none;
+    position: absolute;
+    top: 0;
+    right: 0;
 
-        i {
-            font-size: 10px;
-            color: @color-medium-grey;
-        }
+    i {
+      font-size: 10px;
+      color: @color-medium-grey;
     }
+  }
 }
 
-.empty-filter-cell{
-    background: white;
+.empty-filter-cell {
+  background: white;
+  border-radius: 4px;
+  position: relative;
+  padding: 16px 24px 16px 16px;
+  text-align: right;
+
+  img {
+    width: 120px;
+    height: 96px;
+    margin-right: 16px;
+  }
+
+  p {
+    color: @color-main-purple;
+    text-align: left;
+    line-height: 1.13;
+    letter-spacing: -0.3px;
+    font-size: 16px;
+  }
+  button {
+    color: white;
+    background: @color-main-purple;
+    text-align: center;
+    width: 73px;
+    height: 24px;
+    letter-spacing: -0.3px;
     border-radius: 4px;
-    position: relative;
-    padding: 16px 24px 16px 16px;
-    text-align: right;
-
-    img{
-        width: 120px;
-        height: 96px;
-        margin-right: 16px;
-    }
-
-    p{
-        color: @color-main-purple;
-        text-align: left;
-        line-height: 1.13;
-        letter-spacing: -0.3px;
-        font-size: 16px;
-    }
-    button{
-        color: white;
-        background: @color-main-purple;
-        text-align: center;
-        width: 73px;
-        height: 24px;
-        letter-spacing: -0.3px;
-        border-radius: 4px;
-        font-size: 16px;
-    }
+    font-size: 16px;
+  }
 }
-
 
 .loading-skeleton {
-    .result-cell {
+  .result-cell {
 
-        pointer-events: none;
+    pointer-events: none;
 
-        .result-cell-content {
-            overflow: hidden;
-        }
-
-        ::-moz-selection {
-            color: transparent;
-        }.header.v-toolbar
-
-        ::selection {
-            color: transparent;
-        }
+    .result-cell-content {
+      overflow: hidden;
     }
+
+    ::-moz-selection {
+      color: transparent;
+    }
+    .header.v-toolbar
+    ::selection {
+      color: transparent;
+    }
+  }
 }
+
 /*#region item skeleton*/
 @skeletonWidth: @cellWidth;
 @cardHeight: 184px;
@@ -212,125 +246,64 @@
 @placeholdersColor: #e6e8e9;
 @cardColor: white;
 
-@elementsPos: 8px 8px, /* image */
-@textPosLeft 8px, /* title */
-@textPosLeft 32px, /* line 1 */
-@textPosLeft 48px, /* line 2 */
-@textPosLeft 64px, /* line 3 */
-@textPosLeft 80px, /* line 4 */
-@textPosLeft 96px, /* line 5 */
-@textPosLeft 153px, /* footer line */
-0 0, /* background */
-0 0; /* wrapper */
+@elementsPos: 8px 8px, /* image */ @textPosLeft 8px, /* title */ @textPosLeft 32px, /* line 1 */ @textPosLeft 48px, /* line 2 */ @textPosLeft 64px, /* line 3 */ @textPosLeft 80px, /* line 4 */ @textPosLeft 96px, /* line 5 */ @textPosLeft 153px, /* footer line */ 0 0, /* background */ 0 0; /* wrapper */
 
-@mobileElementsPos: 8px 8px, /* image */
-@mobileTextPosLeft 8px, /* title */
-@mobileTextPosLeft 32px, /* line 1 */
-@mobileTextPosLeft 48px, /* line 2 */
-@mobileTextPosLeft 64px, /* line 3 */
-@mobileTextPosLeft 120px, /* footer line */
-0 0, /* background */
-0 0; /* wrapper */
+@mobileElementsPos: 8px 8px, /* image */ @mobileTextPosLeft 8px, /* title */ @mobileTextPosLeft 32px, /* line 1 */ @mobileTextPosLeft 48px, /* line 2 */ @mobileTextPosLeft 64px, /* line 3 */ @mobileTextPosLeft 120px, /* footer line */ 0 0, /* background */ 0 0; /* wrapper */
 .skeletonBackgroundImage(@placeholdersColor, @cardColor, @cardHeight, @cardImageHeight,@titleHeight,@textLineHeght) {
-    background-image: /**/
-    linear-gradient(90deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.5) 50%, rgba(255, 255, 255, 0)), /* highlight */
-    linear-gradient(@placeholdersColor @cardImageHeight, transparent 0), /* image */
-    linear-gradient(@placeholdersColor @titleHeight, transparent 0), /* title */
-    linear-gradient(@placeholdersColor @textLineHeight, transparent 0), /* line 1 */
-    linear-gradient(@placeholdersColor @textLineHeight, transparent 0), /* line 2 */
-    linear-gradient(@placeholdersColor @textLineHeight, transparent 0), /* line 3 */
-    linear-gradient(@placeholdersColor @textLineHeight, transparent 0), /* line 4 */
-    linear-gradient(@placeholdersColor @textLineHeight, transparent 0), /* line 5 */
-    linear-gradient(@placeholdersColor @textLineHeight, transparent 0), /* footer line */
-    linear-gradient(@cardColor @cardHeight - 8px, transparent 0), /* background */
-    linear-gradient(transparent @cardHeight, transparent 0); /* wrapper */
+  background-image: /**/ linear-gradient(90deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.5) 50%, rgba(255, 255, 255, 0)), /* highlight */ linear-gradient(@placeholdersColor @cardImageHeight, transparent 0), /* image */ linear-gradient(@placeholdersColor @titleHeight, transparent 0), /* title */ linear-gradient(@placeholdersColor @textLineHeight, transparent 0), /* line 1 */ linear-gradient(@placeholdersColor @textLineHeight, transparent 0), /* line 2 */ linear-gradient(@placeholdersColor @textLineHeight, transparent 0), /* line 3 */ linear-gradient(@placeholdersColor @textLineHeight, transparent 0), /* line 4 */ linear-gradient(@placeholdersColor @textLineHeight, transparent 0), /* line 5 */ linear-gradient(@placeholdersColor @textLineHeight, transparent 0), /* footer line */ linear-gradient(@cardColor @cardHeight - 8px, transparent 0), /* background */ linear-gradient(transparent @cardHeight, transparent 0); /* wrapper */
 }
 
 .skeletonBackgroundSize(@cardHeight, @highlightWidth, @imageWidth, @titleWidth, @line1Width, @line2Width, @line3Width, @line4Width, @line5Width, @footerWidth, @backgroundWidth) {
-    background-size: /**/
-    @highlightWidth @cardHeight - 8px, /* highlight */
-    @imageWidth @cardHeight, /* image */
-    @titleWidth @cardHeight, /* title */
-    @line1Width @cardHeight, /* line1 */
-    @line2Width @cardHeight, /* line2 */
-    @line3Width @cardHeight, /* line3 */
-    @line4Width @cardHeight, /* line4 */
-    @line5Width @cardHeight, /* line5 */
-    @footerWidth @cardHeight, /* footer line */
-    @backgroundWidth @cardHeight, /* background */
-    @backgroundWidth @cardHeight; /* wrapper */
+  background-size: /**/ @highlightWidth @cardHeight - 8px, /* highlight */ @imageWidth @cardHeight, /* image */ @titleWidth @cardHeight, /* title */ @line1Width @cardHeight, /* line1 */ @line2Width @cardHeight, /* line2 */ @line3Width @cardHeight, /* line3 */ @line4Width @cardHeight, /* line4 */ @line5Width @cardHeight, /* line5 */ @footerWidth @cardHeight, /* footer line */ @backgroundWidth @cardHeight, /* background */ @backgroundWidth @cardHeight; /* wrapper */
 }
 
 .skeletonMobileBackgroundImage(@placeholdersColor, @cardColor, @cardHeight, @cardImageHeight,@titleHeight,@textLineHeght) {
-    background-image: /**/
-    linear-gradient(90deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.5) 50%, rgba(255, 255, 255, 0)), /* highlight */
-    linear-gradient(@placeholdersColor @cardImageHeight, transparent 0), /* image */
-    linear-gradient(@placeholdersColor @titleHeight, transparent 0), /* title */
-    linear-gradient(@placeholdersColor @textLineHeight, transparent 0), /* line 1 */
-    linear-gradient(@placeholdersColor @textLineHeight, transparent 0), /* line 2 */
-    linear-gradient(@placeholdersColor @textLineHeight, transparent 0), /* line 3 */
-    linear-gradient(@placeholdersColor @textLineHeight, transparent 0), /* footer line */
-    linear-gradient(@cardColor @cardHeight - 8px, transparent 0), /* background */
-    linear-gradient(transparent @cardHeight, transparent 0); /* wrapper */
+  background-image: /**/ linear-gradient(90deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.5) 50%, rgba(255, 255, 255, 0)), /* highlight */ linear-gradient(@placeholdersColor @cardImageHeight, transparent 0), /* image */ linear-gradient(@placeholdersColor @titleHeight, transparent 0), /* title */ linear-gradient(@placeholdersColor @textLineHeight, transparent 0), /* line 1 */ linear-gradient(@placeholdersColor @textLineHeight, transparent 0), /* line 2 */ linear-gradient(@placeholdersColor @textLineHeight, transparent 0), /* line 3 */ linear-gradient(@placeholdersColor @textLineHeight, transparent 0), /* footer line */ linear-gradient(@cardColor @cardHeight - 8px, transparent 0), /* background */ linear-gradient(transparent @cardHeight, transparent 0); /* wrapper */
 }
 
 .skeletonMobileBackgroundSize(@cardHeight, @highlightWidth, @imageWidth, @titleWidth, @line1Width, @line2Width, @line3Width, @footerWidth, @backgroundWidth) {
-    background-size: /**/
-    @highlightWidth @cardHeight - 8px, /* highlight */
-    @imageWidth @cardHeight, /* image */
-    @titleWidth @cardHeight, /* title */
-    @line1Width @cardHeight, /* line1 */
-    @line2Width @cardHeight, /* line2 */
-    @line3Width @cardHeight, /* line3 */
-    @footerWidth @cardHeight, /* footer line */
-    @backgroundWidth @cardHeight, /* background */
-    @backgroundWidth @cardHeight; /* wrapper */
+  background-size: /**/ @highlightWidth @cardHeight - 8px, /* highlight */ @imageWidth @cardHeight, /* image */ @titleWidth @cardHeight, /* title */ @line1Width @cardHeight, /* line1 */ @line2Width @cardHeight, /* line2 */ @line3Width @cardHeight, /* line3 */ @footerWidth @cardHeight, /* footer line */ @backgroundWidth @cardHeight, /* background */ @backgroundWidth @cardHeight; /* wrapper */
 }
 
 .loading {
-    .loader {
-        display: none;
-    }
+  .loader {
+    display: none;
+  }
 
-    .skeleton {
-        width: @skeletonWidth;
-        max-width: 100%;
-        height: 100vh;
-        .skeletonBackgroundImage(@placeholdersColor, @cardColor, @cardHeight, @cardImageHeight,@titleHeight,@textLineHeight);
-        .skeletonBackgroundSize(@cardHeight,200px, 120px, 224px, 264px, 264px, 240px, 160px, 240px, 160px, @skeletonWidth);
-        background-position: /**/
-        0 0, /* highlight */
-        @elementsPos;
-        background-repeat: repeat-y;
-        animation: shine 2s infinite;
+  .skeleton {
+    width: @skeletonWidth;
+    max-width: 100%;
+    height: 100vh;
+    .skeletonBackgroundImage(@placeholdersColor, @cardColor, @cardHeight, @cardImageHeight, @titleHeight, @textLineHeight);
+    .skeletonBackgroundSize(@cardHeight, 200px, 120px, 224px, 264px, 264px, 240px, 160px, 240px, 160px, @skeletonWidth);
+    background-position: /**/ 0 0, /* highlight */ @elementsPos;
+    background-repeat: repeat-y;
+    animation: shine 2s infinite;
 
-        @media(max-width: @screen-xs) {
-            width: @mobileSkeletonWidth;
-            max-width: 100%;
-            height: 100vh;
-            .skeletonMobileBackgroundImage(@placeholdersColor, @cardColor, @mobileCardHeight, @mobileCardImageHeight,@titleHeight,@textLineHeight);
-            .skeletonMobileBackgroundSize(@mobileCardHeight,200px, 88px,168px,184px,184px,152px,104px,@mobileSkeletonWidth);
-            background-position: /**/
-            0 0, /* highlight */
-            @mobileElementsPos;
-            /**/
-            background-repeat: repeat-y;
-            animation: mobileShine 2s infinite;
-        }
+    @media (max-width: @screen-xs) {
+      width: @mobileSkeletonWidth;
+      max-width: 100%;
+      height: 100vh;
+      .skeletonMobileBackgroundImage(@placeholdersColor, @cardColor, @mobileCardHeight, @mobileCardImageHeight, @titleHeight, @textLineHeight);
+      .skeletonMobileBackgroundSize(@mobileCardHeight, 200px, 88px, 168px, 184px, 184px, 152px, 104px, @mobileSkeletonWidth);
+      background-position: /**/ 0 0, /* highlight */ @mobileElementsPos;
+      /**/
+      background-repeat: repeat-y;
+      animation: mobileShine 2s infinite;
     }
+  }
 }
 
 @keyframes shine {
-    to {
-        background-position: @skeletonWidth 0, /* move highlight to right */
-        @elementsPos;
-    }
+  to {
+    background-position: @skeletonWidth 0, /* move highlight to right */ @elementsPos;
+  }
 }
 
 @keyframes mobileShine {
-    to {
-        background-position: @mobileSkeletonWidth 0, /* move highlight to right */
-        @mobileElementsPos;
-    }
+  to {
+    background-position: @mobileSkeletonWidth 0, /* move highlight to right */ @mobileElementsPos;
+  }
 }
+
 /*#endregion*/
