fix the vertical menu on the edge

--- a/Cloudents.Web/ClientApp/components/header/verticalTabs.less
+++ b/Cloudents.Web/ClientApp/components/header/verticalTabs.less
@@ -1,6 +1,7 @@
 ﻿@import "../../mixin.less";
 
 .verticals.line {
+    height:1px; //edge fix
     .limited-width()!important;
     @media(max-width: @screen-sm) {
         align-items: stretch;
