banner media queries!!!

--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -45,6 +45,9 @@
             display: block;
             margin: 16px 32px 16px 64px;
             width: 80%;
+            &.no-filter-btn{
+                margin: 16px 48px;
+            }
         }
         @media(max-width: (@screen-sm)){  display: block;
         }
