--- a/Cloudents.Web/ClientApp/mixin.less
+++ b/Cloudents.Web/ClientApp/mixin.less
@@ -260,7 +260,10 @@
 @registrationFieldHeight: 48px;
 @screen-xs: 599px;
 @screen-sm: 959px;
+@screen-sm-960: 960px;
+@screen-xss: 375px;
 @screen-md: 1263px;
+@screen-md-plus: 1280px;
 @screen-lg: 1904px;
 @logoWidth: 192px;
 @cellWidth: 500px;
