--- a/Cloudents.Web/ClientApp/components/helpers/header.less
+++ b/Cloudents.Web/ClientApp/components/helpers/header.less
@@ -2,7 +2,7 @@
 
 .header {
   //background-image: linear-gradient(276deg, @Spitball-Main-color, #3023ae);
-  z-index: 999;
+  z-index: 101;
   &.v-toolbar {
     background-color: @color-white;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
@@ -233,8 +233,8 @@
   }
 }
 
-.navigation-drawer {
-  z-index: 10;
+.v-navigation-drawer {
+  z-index: 102;
 }
 
 .settings-list .v-list__tile__title, .menu-list .v-list__tile__title {
