--- a/Cloudents.Web/ClientApp/components/results/Result.less
+++ b/Cloudents.Web/ClientApp/components/results/Result.less
@@ -2,7 +2,7 @@
 
 .right-in {
   border: 1px solid @color-main-purple;
-  padding: 25px;
+  padding: 16px;
   text-align: center;
   position: relative;
   p.empty-state {
@@ -22,11 +22,11 @@
     width: 0;
     height: 0;
     left: auto;
-    right: -24px;
+    right: -31px;
     top: 8px;
-    border-top: 8.5px solid transparent;
-    border-bottom: 8.5px solid transparent;
-    border-left: 24px solid @color-main-purple;
+    border-style: solid;
+    border-width: 9px 0 9px 30px;
+    border-color: transparent transparent transparent @color-main-purple;
   }
   &:after {
     content: ' ';
@@ -34,15 +34,15 @@
     width: 0;
     height: 0;
     left: auto;
-    right: -19px;
+    right: -28px;
     top: 8px;
     bottom: auto;
-    border-top: 8.5px solid transparent;
-    border-bottom: 8.5px solid transparent;
-    border-left: 20px solid @color-white;
+    border-style: solid;
+    border-width: 9px 0 9px 30px;
+    border-color: transparent transparent transparent @color-white;
   }
   @media (max-width: @screen-xs) {
-    margin-top: 36px;
+    margin-top: 16px;
 
     &:after {
       content: '';
@@ -54,8 +54,7 @@
       border-left: 8.5px solid transparent;
       border-right: 8.5px solid transparent;
       border-bottom:  20px solid @color-white;
-      margin-left: -21px;
-      margin-top: -42px;
+      margin-top: -26px;
     }
     &:before {
       content: '';
@@ -67,8 +66,7 @@
       border-left: 8.5px solid transparent;
       border-right: 8.5px solid transparent;
       border-bottom:  20px solid @color-main-purple;
-      margin-left: -21px;
-      margin-top: -42px;
+      margin-top: -29px;
     }
 
   }
