banner close func fixed

--- a/Cloudents.Ico/Views/Home/Index.cshtml
+++ b/Cloudents.Ico/Views/Home/Index.cshtml
@@ -1539,7 +1539,7 @@
                 <p class="animated" data-animate="fadeInUp" data-delay=".1">Any questions? Reach out to us and we’ll get back to you shortly.</p>
                 <ul class="contact-info-alt">
                     <li class="animated" data-animate="fadeInUp" data-delay=".2"><em class="fa fa-phone"></em><span>+972 52 883 0686</span></li>
-                    <li class="animated" data-animate="fadeInUp" data-delay=".3"><em class="fa fa-envelope"></em><span> <a href="mailto:tokensale@spitball.co?Subject=Spitball%20Info">tokensale@spitball.co</a></span></li>
+                    <li class="animated" data-animate="fadeInUp" data-delay=".3"><em class="fa fa-envelope"></em><span> <a href="mailto:token@spitball.co?Subject=Spitball%20Info">token@spitball.co</a></span></li>
                     <li class="animated" data-animate="fadeInUp" data-delay=".4"><em class="fa fa-paper-plane"></em><span><a href="https://t.me/Spitball" target="_blank">Join us on Telegram</a></span></li>
                 </ul>
             </div><!-- .col  -->
