--- a/Cloudents.Ico/Views/Shared/_Layout.cshtml
+++ b/Cloudents.Ico/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>@ViewData["Title"] - Cloudents.Ico</title>
+    <title>@ViewData["Title"] - Spitball 2.0</title>
     <link rel="shortcut icon" href="images/fav.png">
 
     <environment include="Development">
