--- a/Cloudents.Web/ClientApp/components/helpers/signup-banner/signup-banner.less
+++ b/Cloudents.Web/ClientApp/components/helpers/signup-banner/signup-banner.less
@@ -1,6 +1,9 @@
 @import "../../../mixin.less";
 
 .banner-wrap {
+  .highlight{
+    font-weight: bold;
+  }
   position: relative;
   height: 345px;
   @media( max-width: 600px){
@@ -32,7 +35,7 @@
     width: 128px;
     position: absolute;
     top: 175px;
-    left: 75%;
+    left: 70%;
     transform: rotate(14deg);
     background-image: linear-gradient(7deg, #ffffff, #e3e3ff);
     background-size: contain;
@@ -169,14 +172,14 @@
   }
   @media (max-width: @screen-xs) {
     width: 362px;
-    margin: 0;
+    margin: 0 0 0 8px;
     top: 13%;
   }
 
   .title-wrap {
     max-width: 850px;
     @media(max-width: 600px){
-      width: 362px;
+      width: 332px;
     }
 
   }
