toolbar mobile fixed margin

--- a/Cloudents.Web/ClientApp/components/header/verticalTabs.less
+++ b/Cloudents.Web/ClientApp/components/header/verticalTabs.less
@@ -5,12 +5,13 @@
     .limited-width()!important;
     @media(max-width: @screen-sm) {
         align-items: stretch;
+        padding-right: 0px !important;
+        padding-left: 0px !important;
     }
 
 
     .v-tabs__item {
         text-transform: capitalize;
-        //padding: 0 0 16px 0 !important;
         //Vuetify 1.1.1
         padding: 0 !important;
         font-size: 14px;
