--- a/Cloudents.Web/ClientApp/components/helpers/header.less
+++ b/Cloudents.Web/ClientApp/components/helpers/header.less
@@ -8,6 +8,7 @@
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
     .v-toolbar__content {
       //.limited-width();
+      padding: 0;
     }
   }
 
@@ -108,7 +109,7 @@
       align-items: flex-end;
       margin-right: 8px;
       @media (max-width: 599px) {
-        margin-right: 3px;
+      margin-right: 0px;
       }
     }
 
